@@ -1805,7 +1805,7 @@ tex2uni = {
 'Game': 0x2141,
 'hbar': 0x0127,
 'hslash': 0x210f,
-'ldots': 0x22ef,
+'ldots': 0x2026,
 'vdots': 0x22ee,
 'doteqdot': 0x2251,
 'doteq': 8784,
@@ -2100,7 +2100,7 @@ tex2uni = {
 'propto': 8733,
 'pi': 960,
 'pm': 177,
-'dots': 8230,
+'dots': 0x2026,
 'nrightarrow': 8603,
 'textasciiacute': 180,
 'Doteq': 8785,
